# ethglobal-lisbon

./: .gitignore  Justfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
extension/: manifest.json
extension/.parcel-cache/: 1e813a0ab55612ca  30d41e25cdbd8424.txt  c00facc946ad8c4f  d43c1a783b32ded4  lock.mdb
src/: erc20s.json  jsconfig.json  lens.ts  union.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  commands.rs  error.rs  main.rs  rpc.rs  simulate.rs  ws.rs
src-tauri/src/context/: inner.rs  mod.rs  network.rs  wallet.rs
src/app/: page.tsx
src/components/: Account.tsx  Balance.tsx  Connection.tsx  Details.tsx  Header.tsx  Menu.tsx  Modal.tsx  Network.tsx  PrankResult.tsx  Union.tsx  WagmiWrapper.tsx  index.ts
src/components/get-accounts/: AddressList.tsx  Balance.tsx  SearchAccounts.tsx  SearchTokenAddress.tsx
src/hooks/: index.ts  use-store.tsx  useAccount.ts  useAccount.tsx  useProvider.ts
src/pages/: _app.tsx  index.tsx
src/types/: index.ts
src/utils/: addCommas.ts  getEthPrice.js  getEthPrice.ts  getPrice.ts
