[package]
name = "ethglobal-lisbon"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6.2"
env_logger = "0.10.0"
eyre = "0.6.8"
futures-util = "0.3.27"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full", "sync"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
thiserror = "1.0.40"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "1a4c224" }
once_cell = "1.17.1"
ethers = { version = "2.0.0", features = ["ws"] }
ethers-core = { version = "2.0.0" }
jsonrpc-core = "18.0.0"
url = "2.3.1"
rng = "0.1.0"

revm = "3.1.1"
foundry-evm = { git = "https://github.com/foundry-rs/foundry", default-features = true }
foundry-common = { git = "https://github.com/foundry-rs/foundry", default-features = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
